# thatway

./: .editorconfig  .gitignore  LICENSE  README.md  README.rst  Taskfile.yaml  conftest.py  pyproject.toml
dct/: config.py  test.py
dct/config/: config.py
examples/mypkg/: __init__.py  new_settings.yaml
examples/mypkg/moduleA/: file.py
examples/mypkg/moduleB/: file.py
tests/: config1.toml  conftest.py  test_base.py  test_conditions.py  test_config.py  test_io.py  test_manager.py  test_setting.py  test_utils.py
thatway/: __init__.py  base.py  conditions.py  config.py  exceptions.py  io.py  manager.py  setting.py  utils.py
thatway/manager/: __init__.py  manager.py  toml.py
