[project]
name = "thatway"
authors = [
    {name = "Justin Lorieau"},
]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    ]
dynamic = ["version"]
dependencies = [
    "pyyaml>=6.0",  # Parsing YAML for Config
]

[tool.setuptools]
packages = ["thatway"]

[tool.setuptools.dynamic]
version = {attr = "thatway.__version__"}

[project.optional-dependencies]

dev = [  # For development
    "pytest>=7.4",  # Testing framework
    "twine>=4.0",  # Manage package uploads
    "build",  # Manage package builds
    "black[d]",  # Code formatter
    ]

[project.urls]
Homepage = "https://github.com/jlorieau/thatway"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
