[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thatway"
authors = [
    {name = "Justin Lorieau"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    ]
dynamic = ["version"]
dependencies = [
    "tomlkit>=0.13",  # Parsing toml
]

[tool.hatch.version]
path = "thatway/__init__.py"

[tool.setuptools]
packages = ["thatway"]

[tool.setuptools.dynamic]
version = {attr = "thatway.__version__"}

[project.optional-dependencies]
dev = [  # For development
    "mypy >= 1.11",  # type annotations
    "twine>=4.0",  # Manage package uploads
    "black[d]",  # Code formatter
    ]

tests = [
    "pytest>=7.4",  # Testing framework
]

# Linting settings
[tool.mypy]
disallow_untyped_defs = true
exclude = [
    "tests*",
]

# Testing settings
[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.md'"
testpaths = [
  "tests",
  "src",  # doctests
  "README.md"
  ]

# Hatch environments
[tool.hatch.envs.default]
features = [
  "tests",
  "dev"
 ]

 # Build hooks and configuration

[tool.hatch.build.targets.wheel]
only-include = ["thatway"]
sources = ["thatway"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
    "hatch-mypyc",
    "mypy",
    "types-PyYAML"
]
require-runtime-dependencies = true
include = [
    "/thatway",
]
exclude = [
    "**/__init__.py",
]
mypy-args = ["--ignore-missing-imports"]

[build.targets.wheel.hooks.mypyc.options]
opt_level = "3"